# rust-vs-js

./: Cargo.toml  LICENSE  mandel_js.html  mandel_js_gpu.html  mandel_rust.html  readme.md
src/: lib.rs
